<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">实战者教育学院</string>

    <string name="Login">登录</string>

    <string name="Regist">注册</string>

    <color name="all_c">#ffcccccc</color>

    <string name="empty"/>

    <string name="password">密码</string>

    <string name="mobile_or_mail">手机号</string>

    <string name="forget_password">忘记密码</string>

    <string name="register_account">注册帐号</string>

    <string name="camera">拍照</string>

    <string name="Photo">从手机相册选择</string>

    <string name="no">取消</string>

    <string name="hint_input_new_pass">新密码</string>

    <string name="hint_input_new_pass_two">请重复新密码</string>

    <string name="hint_input_old_pass">旧密码</string>

    <string name="hint_input_name">请输入昵称</string>

    <string name="get_ic">获取验证码</string>

    <string name="hint_input_ic">请输入验证码</string>

    <string name="hint_input_tel">请输入11位手机号</string>

    <string name="hint_input_pass">请输入6-16位密码</string>

    <string name="hint_tel">手机号</string>

    <string name="hint_pass">密码</string>

    <string name="recommend_coures">推荐课程</string>

    <string name="name">姓名</string>

    <string name="input_name">请输入姓名</string>

    <string name="sex">性别</string>

    <string name="choose_sex">请选择性别</string>

    <string name="birthday">生日</string>

    <string name="choose_birthday">请选择生日</string>

    <string name="qq">QQ</string>

    <string name="input_qq">请输入QQ</string>

    <string name="email">邮箱</string>

    <string name="input_email">请输入邮箱</string>

    <string name="city">所在城市</string>

    <string name="my_want">请输入个人签名</string>

    <string name="hint_input_pass_two">请再次输入密码</string>
    <string name="question_activity_text_1">会员可以在此提问，实战者老师有问必答</string>

    <string name="question_activity_text_2">对大家有帮助的问答会被标记为“推荐” \r\n对大家有帮助的问答会被标记为“推荐”\r\n会帮你学得更全面</string>

    <string name="question_activity_text_3">截止目前，同学们一共提了%1$s个问题， 问题会在%2$s小时内得到回答</string>

    <string name="service_terms"><u>《实战者服务条款》</u></string>
    <string name="terms_1">1、实战者APP服务条款的确认和接纳</string>
    <string name="terms_2">实战者APP的各项电子服务的所有权和运作权归西安实战者网络科技有限公司。实战者按照其发布的章程、服务条款和操作规则提供服务。用户使用或接受服务，即视为其已了解并完全同意本服务条款的各项内容，包括实战者就服务条款随时作出的任何增加、删减或修改。</string>
    <string name="terms_3">2、服务条款的修改和服务修订</string>
    <string name="terms_4">实战者有权在必要时修改服务条款，实战者服务条款一旦发生变动，将会在网站上同步提示修改内容。如果用户继续享用网络服务，则视为同意并接受服务条款的变动；如果用户不同意所改动的内容，可以主动取消获得的网络服务。实战者保留随时修改或中断服务而不需知会用户的权利。实战者行使修改或中断服务的权利，不需对用户或第三方负责。</string>
    <string name="terms_5">3、用户信息使用</string>
    <string name="terms_6">用户所提供的个人资料将会被实战者进行适当的处理汇总，并根据实际业务需要为实战者的合作方提供依据。用户同意实战者不定期地通过注册会员留下的电子邮件、手机短信或通讯地址同该用户保持联系。为完成实战者为用户所提供的服务，用户同意实战者利用计算机及其它方式搜集，保存，处理个人资料（包括但不限于姓名、出生年月日、身份证号码、电话及通信地址等信息）和其它信息</string>
    <string name="terms_7">4、用户隐私制度</string>
    <string name="terms_8">尊重用户个人隐私是实战者义不容辞的责任，实战者不会在未经合法用户授权时公开其提交或存储在实战者的非公开资料，但以下情况除外：根据法机关、政府部门、行业主管部门或其他管理机关之要求；根据法律法规、规范性文件或相关政策要求；为社会公共目的向相关单位提供个人资料；因用户密码告知他人或与他人共享注册帐户，由此导致的任何个人资料泄露；由于黑客攻击、计算机病毒侵入或发作、因政府管制而造成的暂时性关闭等影响网络正常经营之不可抗力而造成的个人资料泄露、丢失、被盗用或被窜改等在紧急情况下为维护用户个人和社会公众的安全之目的。</string>
    <string name="terms_9">5、拒绝提供担保</string>
    <string name="terms_10">用户个人对网络服务的使用承担风险，实战者对此不承担任何责任，也不作任何类型的担保，但是不排除商业性的隐含担保、特定目的和不违反规定的适当担保。对实战者APP外部链接的真实性、准确性和完整性，以及非实战者控制的任何网页的内容的真实性、准确性和完整性，实战者不作任何担保，也不承担任何责任。实战者不担保服务一定能满足用户的要求，也不担保服务不会受中断，对服务的及时性，安全性，出错发生都不作担保。实战者对用户在实战者APP上得到的任何商品购物服务或交易进程，不作担保。</string>
    <string name="terms_11">6、保障</string>
    <string name="terms_12">用户不得利用实战者的服务从事任何违法、不正当或可能侵害实战者或任何第三方合法权益的活动。用户完全理解并同意，因其不当行为导致第三方索赔的，用户应承担实战者及其所属公司或子公司、分公司、董事职员、代理人因此发生的所有费用和遭受的一切损失（包括其向第三方进行的赔付费用以及其为处理该赔付要求而花费的所有费用，包括但不限于律师费、诉讼费、差旅费等）。</string>
    <string name="terms_13">7、结束服务</string>
    <string name="terms_14">用户理解并完全同意，实战者可随时自行决定中断或终止一项或多项网络服务而无需事先通知，也无需对用户或任何第三方承担任何责任。用户对后来的条款修改有异议，或对实战者APP的服务不满，可以行使如下权利：• 停止使用实战者APP的网络服务。• 通告实战者APP停止对该用户的服务。用户结束服务后，用户使用网络服务的权利立即中止。自结束服务之时起，用户无权要求，拓盛也没有义务向用户或任何第三方提供任何未处理的信息或未完成的服务。</string>
    <string name="terms_15">8、法律</string>
    <string name="terms_16">本服务条款的订立、执行和解释及争议的解决均应适用中华人民共和国法律。如服务条款与中华人民共和国法律法规相抵触，则发生抵触的条款应按相关法律规定重新解释，而其它条款则仍然有效。</string>
</resources>