<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15.0dip"
        android:text="@string/camera"
        android:textColor="@color/blue2"
        android:textSize="@dimen/max" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/line" />

    <TextView
        android:id="@+id/tv_photo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15.0dip"
        android:text="@string/Photo"
        android:textColor="@color/blue2"
        android:textSize="@dimen/max" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/line" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15.0dip"
        android:text="@string/no"
        android:textColor="@color/one_level"
        android:textSize="@dimen/max" />
</LinearLayout>