<?xml version="1.0" encoding="UTF-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">


    <ImageView
        android:id="@+id/txtPull"
        android:layout_width="match_parent"
        android:layout_height="@dimen/wh200"
        android:alpha="0.75"
        android:src="@drawable/login"
        android:scaleType="centerInside"
        android:layout_alignTop="@+id/topView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />






    <EditText
        android:id="@+id/MobileNum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/ic_login_tel"
        android:drawablePadding="15.0dip"
        android:gravity="center|left"
        android:hint="@string/hint_input_tel"
        android:inputType="phone"
        android:maxLength="11"
        android:padding="15.0dp"

        android:textColor="@color/one_level"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/end_text" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtAuthCode"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3.0"
            android:background="@color/transparent"
            android:drawableLeft="@drawable/ic_login_yzm"
            android:drawablePadding="15.0dip"
            android:gravity="center|left"
            android:hint="@string/hint_input_ic"
            android:inputType="number"
            android:maxLength="6"
            android:padding="15.0dp"
            android:textColor="@color/one_level"
            android:textColorHint="@color/hint"
            android:textSize="@dimen/end_text" />

        <Button
            android:id="@+id/btnSendAuth"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_weight="2.0"
            android:background="@drawable/btn_four_shape"
            android:gravity="center"
            android:text="@string/get_ic"
            android:textColor="@color/one_level"
            android:textSize="@dimen/text" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/line" />

    <EditText
        android:id="@+id/edit_qrpsw"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:drawableLeft="@drawable/ic_login_lock"
        android:drawablePadding="15.0dip"
        android:gravity="center|left"
        android:hint="@string/hint_input_pass"
        android:inputType="textPassword"
        android:maxLength="16"
        android:padding="15.0dp"
        android:textColor="@color/one_level"
        android:textColorHint="@color/hint"
        android:textSize="@dimen/end_text" />


    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dip"
        android:background="@color/line" />
    <LinearLayout
        android:layout_marginTop="@dimen/wh20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15.0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/text"
            android:text="注册即表示同意并接受"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text"
            android:text="《服务条款》"
            android:textColor="@color/blue2"
            />
    </LinearLayout>

    <!--</LinearLayout>-->
        <Button
            android:id="@+id/btnFinish"
            android:layout_width="fill_parent"
            android:layout_height="42.0dip"
            android:background="@drawable/login_button_bg"
            android:onClick="register"
            android:text="立即注册"
            android:textColor="@color/white"
            android:textSize="@dimen/fl_text"
            android:layout_margin="@dimen/wh20"
            android:layout_below="@+id/edit_qrpsw"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/wh20" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:gravity="center|right"
            android:padding="15.0dip"
            android:text="已有帐号？立即登录"
            android:textColor="@color/dh"
            android:textSize="@dimen/top_text"
            android:layout_marginTop="25dp"
            android:id="@+id/zhlogin" />


    <!--</LinearLayout>-->

    <!--<ImageView-->
        <!--android:id="@+id/txtPull"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:alpha="0.75"-->
        <!--android:scaleType="centerInside"-->
        <!--android:src="@mipmap/ic_launcher"-->
        <!--android:layout_below="@+id/topView"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginTop="61dp" />-->


</LinearLayout>